--- a/templates/callback_form.html
+++ b/templates/callback_form.html
@@ -34,7 +34,7 @@
                 <p class="form-error">Отмеченные поля обязательны для заполнения</p>
                 <button id="form_submit" type="submit"  class="btn btn-lg m-a mb30" onclick="sendForm();">
                     Узнать стоимость своей работы<br>
-                    <span>ответ придет на ваш почтовый ящик</span>
+                    <span>ответ придет на Ваш почтовый ящик</span>
                 </button>
 
                 <label class="custom-checkbox"><span>Даю согласие на обработку моих персональных данных</span>
