--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -43,7 +43,7 @@
     <section id="callback_form" class="calculation-form">
         <div style="margin-top: 140px" class="container-sm">
             <h3 class="text-center">Узнайте стоимость своей работы</h3>
-            <h4 class="text-center">Мы пришлём точный ответ на вашу почту</h4>
+            <h4 class="text-center">Мы пришлём точный ответ на Вашу почту</h4>
             <form onsubmit="return false;" enctype="multipart/form-data" method="post" >{% csrf_token %}
                 <div class="calculation-form-wrapper">
                     <div class="calculation-form-inner">
@@ -79,7 +79,7 @@
                     <p class="form-error">Отмеченные поля обязательны для заполнения</p>
                     <button id="form_submit" type="submit"  class="btn btn-lg m-a mb30" onclick="sendForm();">
                         Узнать стоимость своей работы<br>
-                        <span>ответ придет на ваш почтовый ящик</span>
+                        <span>ответ придет на Ваш почтовый ящик</span>
                     </button>
 
                     <label class="custom-checkbox"><span>Даю согласие на обработку моих персональных данных</span>
@@ -93,7 +93,7 @@
     </section><!-- // calculation-form -->
     <section class="about-man">
         <div class="container">
-            <h3 class="mb50">Работу выполнит человек, <span>специализирующийся</span><br>на вашей специальности</h3>
+            <h3 class="mb50">Работу выполнит человек, <span>специализирующийся</span><br>на Вашей специальности</h3>
             <p class="text-block not-visible-sm">
                 Мы несколько раз меняли исполнителей, именно потому, что нам было необхадимо лично видеть, что человек искрене любит свое дело, а значит, к каждой работе будет подходить уникально и ответственно, работая на результат.
             </p>
@@ -152,7 +152,7 @@
                 <div id="slide_1" class="how-it-works-slide slide-active">
                     <div class="slide-text">
                         <h5 data-number="01" class="mb30">Оставьте заявку и узнайте цену</h5>
-                        <p ><a class="link" href="#callback_form">Заполните несколько полей</a>, после чего мы сами моментально свяжемся с вами и отправим письмо с ценой вашей работы на ваш e-mail</p>
+                        <p ><a class="link" href="#callback_form">Заполните несколько полей</a>, после чего мы сами моментально свяжемся с Вами и отправим письмо с ценой Вашей работы на Ваш e-mail</p>
                     </div>
                     <div class="slide-img text-right not-visible-sm">
                         <img src="{% static 'images/hw-slider.jpg' %}" alt="">
@@ -160,8 +160,8 @@
                 </div>
                 <div id="slide_2" class="how-it-works-slide ">
                     <div class="slide-text">
-                        <h5 data-number="02" class="mb30">Менеджер расскажет вам все подробности и ответит на ваши вопросы</h5>
-                        <p>Менеджер обсудит с вами вашу проблему, подберет способ решения, предложит варианты оплаты, и назначит вам специалиста</p>
+                        <h5 data-number="02" class="mb30">Менеджер расскажет Вам все подробности и ответит на Ваши вопросы</h5>
+                        <p>Менеджер обсудит с Вами Вашу проблему, подберет способ решения, предложит варианты оплаты, и назначит Вам специалиста</p>
                     </div>
                     <div class="slide-img text-right not-visible-sm">
                         <img src="{% static 'images/hw-slider1.jpg' %}" alt="">
@@ -170,7 +170,7 @@
                 <div id="slide_3" class="how-it-works-slide ">
                     <div class="slide-text">
                         <h5 data-number="03" class="mb30">Мы сами оповестим вас о готовности работы</h5>
-                        <p >Мы постоянно остаемся на связи и отвечаем на все ваши вопросы. После того, как ваша работа готова, мы сами связываемся с вамии предоставляем результат — данные анти-плагиата или другие необходимые данные</p>
+                        <p >Мы постоянно остаемся на связи и отвечаем на все Ваши вопросы. После того, как Ваша работа готова, мы сами связываемся с Вами и предоставляем результат — данные анти-плагиата или другие необходимые данные</p>
                     </div>
                     <div class="slide-img text-right not-visible-sm">
                         <img src="{% static 'images/hw-slider2.jpg' %}" alt="">
@@ -179,7 +179,7 @@
                 <div id="slide_4" class="how-it-works-slide ">
                     <div class="slide-text">
                         <h5 data-number="04" class="mb30">Оплата работы</h5>
-                        <p >Вы производите доплату и мы полность передаем вам всю работу. После чего полностью сопроваждаем вас до полной сдачи работы, если необходимо выполнить доработки, выполняем бесплатно </p>
+                        <p >Вы производите доплату и мы полность передаем Вам всю работу. После чего полностью сопроваждаем вас до полной сдачи работы, если необходимо выполнить доработки, выполняем бесплатно </p>
                     </div>
                     <div class="slide-img text-right not-visible-sm">
                         <img src="{% static 'images/hw-slider3.jpg' %}" alt="">
@@ -204,7 +204,7 @@
     <section id="about" class="lets-meet not-visible-md">
         <div class="container">
             <div class="lets-meet-inner">
-                <h3>Давайте познакомимся<br/> с вами лично</h3>
+                <h3>Давайте познакомимся<br/> с Вами лично</h3>
                 <div class="quote">
                     <p>Несколько лет ушло на отбор настоящих профессионалов, которые не просто видят в этом способ заработка, а действительно любят свое дело</p>
                 </div>
